--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
+  <!-- aos -->
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <title>Optic Shop BD</title>
 </head>
 
@@ -73,6 +76,11 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
   <script src="./spinJavaScript.js"></script>
+  <!-- aos -->
+  <script src="bower_components/aos/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
