--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
 
   <!-- aos -->
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+
+  <!-- Material Table -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>Optic Shop BD</title>
 </head>
 
